deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-api-ingress
  namespace: camping
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    name: site-api-ingress
spec:
  rules:
  - host: api.camping-galaxy.com
    http:
      paths:
      - pathType: Prefix
        path: "/campsites(/|$)(.*)"
        backend:
          service:
            name: sites-api-service
            port: 
              number: 80
# GET http://api.camping-galaxy.com/campsites/sites
